style(test): format test code and add Javadoc